# fluxity-v1-core

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/base/: constants.rs  contract.rs  data_key.rs  errors.rs  events.rs  extend_ttl.rs  interface.rs  mod.rs  storage.rs  token.rs  types.rs  utils.rs
src/tests/: cancel_stream.rs  combined.rs  create_stream.rs  create_vesting.rs  data_key.rs  get_stream.rs  mod.rs  setup.rs  take_fee.rs  take_xlm_fee.rs  withdraw_stream.rs
test_snapshots/tests/cancel_stream/: test_cancel_stream_should_emit_event.1.json  test_cancel_stream_should_revert_when_cancellable_date_is_not_reached.1.json  test_cancel_stream_should_revert_when_stream_is_already_cancelled.1.json  test_cancel_stream_should_revert_when_stream_is_already_settled.1.json  test_cancel_stream_should_transfer_tokens_to_both_sides.1.json  test_stream_should_be_cancelled_after_creation.1.json
test_snapshots/tests/combined/: test_cancel_stream_should_not_transfer_when_stream_is_fully_withdrawn.1.json  test_cancel_stream_should_transfer_when_withdrawn_is_not_zero.1.json
test_snapshots/tests/create_stream/: test_create_stream_should_emit_events.1.json  test_second_stream_should_have_incremented_id.1.json  test_stream_should_be_created.1.json  test_stream_should_be_created_and_id_should_increment.1.json  test_stream_should_be_created_and_id_should_increment_by_200.1.json  test_stream_should_revert_when_amount_is_negative.1.json  test_stream_should_revert_when_amount_is_zero.1.json  test_stream_should_revert_when_cliff_date_is_less_than_start_date.1.json  (+3 more)
(+19 files in other folders)
